[package]
name = "kvs"
version = "0.1.0"
authors = ["Tunahan Karlibas <dvt.tnhn.krlbs@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"